[project]
name = "barangay-boundaries-repository"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.0",
    "geopandas>=1.1.3",
    "kreuzberg>=4.9.9",
    "openai>=1.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rdflib>=7.6.0",
    "ruff>=0.15.16",
    "shapely>=2.1.2",
]
