[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
brgybnd = "barangay_boundaries_repository.cli:cli"

[tool.uv]
package = true

[project]
name = "barangay-boundaries-repository"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "barangay>=2026.4.13.3",
    "click>=8.0",
    "geojson>=3.3.0",
    "geopandas>=1.1.3",
    "kreuzberg>=4.9.9",
    "openai>=1.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rdflib>=7.6.0",
    "ruff>=0.15.16",
    "shapely>=2.1.2",
    "ty>=0.0.45",
]
